	  will not be reported if you attempt to list a empty pseudo-directory
	  (2014-2-19).
	* fs/fs_rmdir.c: 'rmdir' can now be used to remove empty directories in
	  the pseudo-filesystem such as might be left after umounting a
	  file system (2014-2-19).
	* fs/fs_mkdir.c: 'mkdir' can now be used to create empty directories in
	  the pseudo-filesystem (2014-2-19).
	* drivers/lcd/mio283qt9a.c: Bug fix from Toby Duckwork (2014-2-19).
	* fs/fs_rename.c: 'rename' can now be used to rename nodes in the
	  pseudo-filesystem (2014-2-19).
	* arch/arm/src/samd/sam_sercom.c:  Move some common SERCOM logic
	  from the USART-specific files to a share-able file where it can
	  also be used by SPI and I2C drivers (2014-2-19).
	* arch/arm/src/samd/sam_spi.c:  Add framework for a SAMD SPI driver.
	  The initial check-in is a crude port of the SAMA5 SPI driver with
	  a lot of missing logic (2014-2-19).
	* arch/arm/src/lm/lm_lowputc.c and lm_serial.c:  Several errors
	  are unmasked with UARTs > UART2 are enabled.  From gosha (2014-2-19).
	* arch/arm/src/samd/sam_spi.c:  The SPI driver is code complete,
	  but untested (2014-2-20).
	* configs/olimex-lpc1766stck/ftpc:  Configuration convert to use
	  the kconfig-frontends tools by Alan Carvalho de Assis (2014-2-20).
	* fs/fs_mkdir.c: 'unlink' can now be used to remove things from the
	  pseudo-filesystem.  A new configuration option as been added:
	  CONFIG_DISABLE_PSEUDOFS_OPERATIONS that effectively can be set
	  back out these recent changes in rmdir, mkdir, unlink, and rename
	  for operations on the pseudo-filesystem (2014-2-20).
	* Kconfig:  Add an option to select default values for configuration
	  variables based upon whether you want a smaller footprint or more
	  features.  CONFIG_DEFAULT_SMALL is used in sched/Kconfig and
	  fs/Kconfig and in apps/.  It turns out this this is not very useful
	  if you are modifying existing configurations because then the
	  defaults do not apply (2014-2-20).
